[gd_scene load_steps=2 format=3 uid="uid://bj42htqnsivwf"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_qt3pr"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt3pr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TransparentBackground" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.290196)

[node name="PauseText" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 24.0
offset_right = 38.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.380392, 0.811765, 0.521569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Pause"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuButtons" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CanvasLayer/MarginContainer/PauseMenuButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Resume"

[node name="MainMenu" type="Button" parent="CanvasLayer/MarginContainer/PauseMenuButtons"]
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="CanvasLayer/MarginContainer/PauseMenuButtons"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
text = "Exit Game"

[connection signal="pressed" from="CanvasLayer/MarginContainer/PauseMenuButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PauseMenuButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PauseMenuButtons/Exit" to="." method="_on_exit_pressed"]
